--- a/.travis.yaml
+++ b/.travis.yaml
@@ -3,6 +3,9 @@ python:
   - "2.6"
   - "2.7"
 # command to install dependencies
-install: "pip install cython numpy --use-mirrors"
+before_install:
+  - "sudo apt-get install -qq python-numpy cython"
+install: 
+  - "pip install -e ."
 # command to run tests
 script: nosetests
